--- a/schema/types/DataAttribute.yaml
+++ b/schema/types/DataAttribute.yaml
@@ -21,3 +21,9 @@ properties:
         label: Description
         description: |
            A description of what this data item stores. Please be specific - i.e. say that it's the country that a user is resident in for tax purposes rather than just country.
+ isInstanceOf:
+        type: DataType
+        relationship: IS_INSTANCE_OF
+        direction: outgoing
+        label: InstanceOf
+        description: What type of data is this?
