Add team governs relationship

--- a/schema/types/DataType.yaml
+++ b/schema/types/DataType.yaml
@@ -23,3 +23,9 @@ properties:
         hasMany: true
         label: InstancesOf
         description: Things that are of this type.
+    valuesGovernedBy:
+        type: Team
+        relationship: VALUES_GOVERNED_BY
+        direaction: outgoing
+        label: ValuesGovernedBy
+        description: The team responsible for deciding what acceptable values for this type are, and for keeping that range of values up-to-date.
