Add in system -> data attribute relationship

--- a/schema/types/DataAttribute.yaml
+++ b/schema/types/DataAttribute.yaml
@@ -27,3 +27,10 @@ properties:
         direction: outgoing
         label: InstanceOf
         description: What type of data is this?
+     isUpdatedBy:
+        type: System
+        relationship: UPDATES
+        direction: incoming
+        hasMany: true
+        label: UpdatedBy
+        description: Systems that update this data item.
