--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -408,7 +408,7 @@ properties:
     description: This is the name of the Heroku pipeline for this system. If you don't have a pipeline, this is the name of the app in Heroku. A pipeline is a group of Heroku apps that share the same codebase where each app in a pipeline represents the different stages in a continuous delivery workflow, i.e. staging, production.
     fieldset: release
   updatesData:
-    type: DataAttribute
+    type: AuditableData
     direction: outgoing
     hasMany: true
     label: Updates data
