--- a/schema/types/AuditableData.yaml
+++ b/schema/types/AuditableData.yaml
@@ -2,7 +2,9 @@ name: AuditableData
 rank: 100
 
 pluralName: AuditableData
-description: At the basic level, a place where items of a particular data type are stored. What would usually be called a field, an attribute or a property. May also be a higher level grouping of AuditableData like a record, object or database row.
+description: >
+    At the basic level, a place where items of a particular data type are stored. What would usually be called a field, an
+    attribute or a property. May also be a higher level grouping of AuditableData like a record, object or database row.
 
 properties:
     code:
@@ -14,13 +16,17 @@ properties:
     name:
         type: Name
         label: Name
-        description: |
-           The unique code for this data attribute. This should be the attribue name in lower case with words separated by hyphens, e.g. billing-country.
+        description: >
+           This item's human readable name, e.g. Billing Country. Ideally this should match your
+           underlying data store name, but if the userlying database name
+           is something obscure like CustomField5 then please use something meaningful
+           and explain in the description.
     description:
         type: Paragraph
         label: Description
-        description: |
-           A description of what this data item stores. Please be specific - i.e. say that it's the country that a user is resident in for tax purposes rather than just country.
+        description: >
+           A description of what this data item stores. Please be specific - i.e. say that it's
+           the country that a user is resident in for tax purposes rather than just country.
     isInstanceOf:
         type: AuditableDataType
         relationship: IS_INSTANCE_OF
