--- a/schema/types/AuditableDataType.yaml
+++ b/schema/types/AuditableDataType.yaml
@@ -7,6 +7,7 @@ properties:
         type: Code
         canIdentify: true
         label: Code
+        pattern: CODE
         description: The unique code for this data type. This should be the type's name hyphenated in lower case, e.g. iso3-country-code.
     name:
         type: Name
