--- a/schema/types/AuditableData.yaml
+++ b/schema/types/AuditableData.yaml
@@ -1,7 +1,7 @@
 name: AuditableData
 rank: 100
 
-pluralName: AuditableData
+pluralName: AuditableDatas
 description: >
     At the basic level, a place where items of a particular data type are stored. What would usually be called a field, an
     attribute or a property. May also be a higher level grouping of AuditableData like a record, object or database row.
