--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -188,7 +188,7 @@ properties:
     deprecationReason: Replaced by architecture field
     label: Architecture Diagram
     description: A diagram of the system's architecture (either a link to one or embedded directly).
-    fieldset: architectureDiagram
+    fieldset: technicalOverview
   troubleshooting:
     type: Document
     deprecationReason: Replaced by firstLineTroubleshooting and secondLineTroubleshooting fields
