--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ references:
   default_container_config: &default_container_config
     working_directory: ~/biz-ops-api
     docker:
-      - image: circleci/node:8.11.1-browsers
+      - image: circleci/node:10.15.3
     environment:
       NEO4J_VERSION: "3.5.0"
 
