--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ references:
   default_container_config: &default_container_config
     working_directory: ~/biz-ops-api
     docker:
-      - image: circleci/node:10.15.3
+      # need -browsers as it bundles selenium, which bundles java, which we need
+      - image: circleci/node:10.15.3-browsers
     environment:
       NEO4J_VERSION: "3.5.0"
 
