Allow "NotApplicable" as a processType for systems which are not managed by FT Technology.

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -4,6 +4,7 @@ ProcessType:
     - FullyAutomated
     - PartiallyAutomated
     - Manual
+    - NotApplicable
     - NotRequired
 FailoverArchitectureType:
   description: The design which allows failover
@@ -15,6 +16,8 @@ FailoverArchitectureType:
     ActivePassive: |
       The service only serves traffic from a single region, but has one or more standby regions
       which can be quickly started (if necessary) and routed to instead.
+    NotApplicable: |
+      Failover is not managed by FT Technology.
     None: |
       No failover process defined
 TrafficLight:
