Add Package type
First pass at adding the Package type. This is so that we can model
things which don't have system like attributes but still have
repositories of code.

--- a/schema/types/Repository.yaml
+++ b/schema/types/Repository.yaml
@@ -47,6 +47,14 @@ properties:
     relationship: HAS_REPO
     description: Systems which the repository holds source code for.
     hasMany: true
+  packages:
+    type: Package
+    direction: incoming
+    hasMany: true
+    label: Packages
+    fieldset: general
+    relationship: HAS_REPO
+    description: Packages which the repository holds source code for.
   versionControlSystem:
     type: VersionControlSystem
     label: Version control system
