--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -332,7 +332,7 @@ properties:
     relationship: DELIVERED_BY
     description: |
       The team which delivers the system. Costs related to this system will be allocated to the 
-      Group this Team is a part of
+      Group this Team is a part of.
     fieldset: ownership
   supportedBy:
     type: Team
