--- a/schema/types/Package.yaml
+++ b/schema/types/Package.yaml
@@ -8,10 +8,10 @@ properties:
     unique: true
     canIdentify: true
     isCore: true
-    pattern: CODE
+    pattern: PACKAGE_NAME
     label: Code
     description: |
-      The unique identification for this package.
+      The unique identification for this package. The format is defined as `ecosystem:publishedPackageName`. For example npm:@financial-times/blah or composer:foo.
   name:
     type: Name
     canIdentify: true
