used more widely shared snyk context for verify

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ workflows:
           filters:
             <<: *triggerable-by-tag
       - verify:
-          context: rel-eng-creds
+          context: rel-eng-snyk
           requires:
             - install
           filters:
