--- a/schema/types/Package.yaml
+++ b/schema/types/Package.yaml
@@ -27,10 +27,17 @@ properties:
       Note that multiple paragraphs and other markdown features are not supported in this field.
   repositories:
     type: Repository
+    deprecationReason: Replaced by repository, which has a singular name befitting this one-to-one relationship
     direction: outgoing
     label: Source code repositories
     relationship: HAS_REPO
     description: The repositories which store this package's source code and/or configuration.
+  repository:
+    type: Repository
+    direction: outgoing
+    label: Source code repositories
+    relationship: HAS_REPO
+    description: The repository which stores this package's source code and/or configuration.
   maintainedBy:
     type: Team
     direction: outgoing
