--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -434,7 +434,7 @@ properties:
     direction: outgoing
     label: Installs packages
     relationship: INSTALLS
-    deprecationReason: Repaced by installsPackages, which is clearer in intent
+    deprecationReason: Replaced by installsPackages, which is clearer in intent
     description: The shared packages (libraries, components, toolkits, etc.) which this system installs and is dependent on.
     hasMany: true
     fieldset: network
