reinstate ranks (to aid transition)

--- a/schema/types/AuditableData.yaml
+++ b/schema/types/AuditableData.yaml
@@ -1,4 +1,6 @@
 name: AuditableData
+rank: 100
+
 pluralName: AuditableDatas
 description: >
     At the basic level, a place where items of a particular data type are stored. What would usually be called a field, an
