--- a/schema/types/CostCentre.yaml
+++ b/schema/types/CostCentre.yaml
@@ -1,5 +1,6 @@
 name: CostCentre
 description: A financial cost centre which pays for the budget of one or more groups
+rank: 55
 properties:
   code:
     type: Code
