--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -1,6 +1,7 @@
 name: Group
 description: |
   An overarching group, responsible for an area of the FT's activities, which contains teams and is costed separately
+rank: 50
 properties:
   code:
     type: Code
