--- a/schema/types/Product.yaml
+++ b/schema/types/Product.yaml
@@ -2,6 +2,7 @@ name: Product
 description: |
   Anything sold by the FT for use by an external entity,
   or produced by an area of FT technology to be used by another internal area.
+rank: 10
 properties:
   code:
     type: Code
