--- a/schema/types/TagInstance.yaml
+++ b/schema/types/TagInstance.yaml
@@ -1,6 +1,7 @@
 name: TagInstance
 description: |
   A node with Tag relationship data specific to a Tag attached to a domain/product website. Data includes the last seen date.
+rank: 100
 createPermissions:
   - ip-cookie-audit
 properties:
