--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -4,6 +4,7 @@ moreInformation: |
     Teams are structured hierarchically. Each team is either part of a Group, part of another Team, or a Supplier
     Teams that are a direct part of Group are known as Higher Level teams.
     Teams which are part of a another team are known as Sub-teams or Child teams.
+rank: 30
 properties:
   code:
     type: Code
