--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -165,6 +165,10 @@ properties:
     label: Governs data
     relationship: VALUES_GOVERNED_BY
     description: The data types that this team governs that values of. i.e. the team curates the range of values for a type.
+  okrLink:
+    type: Url
+    label: OKR Link
+    description: "A url linking to the Objectives & Key Results this team is currently focusing on."
 fieldsets:
   general:
     heading: General information
