--- a/schema/type-hierarchy.yaml
+++ b/schema/type-hierarchy.yaml
@@ -1,28 +1,27 @@
--
-  name: Business
+business:
+  label: Business
   description: Relating to how the FT makes and spends its money
   types:
     - BusinessCapability
     - CostCentre
     - Product
-    - Feature
--
-  name: Technology
+technology:
+  label: Technology
   description: blah blah
   types:
     - System
     - Package
     - Repository
     - Healthcheck
--
-  name: Organisation
+organisation:
+  label: Organisation
   description: Operational units of the FT e.g. teams, people
   types:
     - Group
     - Team
     - Person
--
-  name: Governance
+governance:
+  label: Governance
   description: Elements of the FT that are in Biz Ops primarily for governance reasons
   types:
     - AuditableData
