--- a/schema/types/BusinessCapability.yaml
+++ b/schema/types/BusinessCapability.yaml
@@ -9,7 +9,7 @@ properties:
     required: true
     unique: true
     canIdentify: true
-    isCore: true
+    useInSummary: true
     pattern: STRICT_CODE
     label: Code
     description: |
@@ -19,21 +19,21 @@ properties:
   name:
     type: Name
     canIdentify: true
-    isCore: true
+    useInSummary: true
     label: Name
     description: |
       The name generally used to refer to the capability.
     fieldset: general
   description:
     type: Paragraph
-    isCore: true
+    useInSummary: true
     label: Description
     description: |
       Brief description of what the cabability is.
     fieldset: general
   importance:
     type: CapabilityTier
-    isCore: true
+    useInSummary: true
     label: Inportance
     description: The level of importance/criticality of the capability.
     fieldset: general
