--- a/schema/types/Tag.yaml
+++ b/schema/types/Tag.yaml
@@ -24,7 +24,7 @@ properties:
     canIdentify: true
     required: true
     unique: true
-    isCore: true
+    useInSummary: true
     fieldset: main
 
   category:
@@ -32,7 +32,7 @@ properties:
     label: Tag Purpose
     description: Purpose of the tag.
     required: true
-    isCore: true
+    useInSummary: true
     fieldset: main
 
   provider:
@@ -40,7 +40,7 @@ properties:
     label: Provider
     description: Team/person or provider who set the tag.
     required: true
-    isCore: true
+    useInSummary: true
     fieldset: main
 
   description:
@@ -48,7 +48,7 @@ properties:
     label: Description
     description: Short description of what the tag does and data it stores.
     required: true
-    isCore: true
+    useInSummary: true
     fieldset: main
 
   hasTagInstanceOf:
