--- a/schema/types/TagInstance.yaml
+++ b/schema/types/TagInstance.yaml
@@ -20,7 +20,7 @@ properties:
     label: Resource Type
     description: Defines the type of tag, e.g image/pixel, script, document.
     required: true
-    isCore: true
+    useInSummary: true
     fieldset: main
 
   lastSeen:
@@ -34,7 +34,7 @@ properties:
     label: Product
     description: The product / website the tag is found on.
     required: true
-    isCore: true
+    useInSummary: true
 
   isInstanceOfTag:
     type: Tag
