--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/Financial-Times/biz-ops-schema/issues"
   },
+  "engines": {
+    "node": "^10.16.0"
+  },
   "homepage": "https://github.com/Financial-Times/biz-ops-schema#readme",
   "devDependencies": {
     "@financial-times/rel-engage": "^5.1.0-beta.13",
