--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"body-parser": "^1.18.3",
 		"common-tags": "^1.7.2",
 		"connect-timeout": "^1.9.0",
+		"deep-diff": "^1.0.2",
 		"express": "^4.16.3",
 		"express-async-errors": "^3.0.0",
 		"graphql": "^14.0.0",
@@ -65,7 +66,7 @@
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
-		"@financial-times/rel-engage": "^7.1.1",
+		"@financial-times/rel-engage": "^7.1.2",
 		"artillery": "^1.6.0-22",
 		"artillery-plugin-statsd": "^2.2.0",
 		"chai": "^4.2.0",
