--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,11 +126,11 @@ workflows:
           name: 'change_log_prod'
           context: 'rel-eng-creds'
           systemCode: 'biz-ops-schema'
-          environment: 'test'
-          slackChannels: 'rel-eng-changes-test'
-          # requires:
-          #   - release
-          # filters:
-          #   <<: *triggerable-by-tag
-          #   branches:
-          #     ignore: /.*/
+          environment: 'prod'
+          slackChannels: 'rel-eng-changes'
+          requires:
+            - release
+          filters:
+            <<: *triggerable-by-tag
+            branches:
+              ignore: /.*/
